# the-machine

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  README.md  docker-compose.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/setup-backend/: action.yml
.github/actions/setup-frontend/: action.yml
.github/copilot/: coding-agent.md
.github/scripts/: reset_db.sh  seed_db.py
.github/workflows/: ai-review.yml  ci.yml  deploy.yml
backend/: fly.toml  pyproject.toml
backend/app/: main.py
backend/app/agent/: indexer.py  loop.py  tools.py
backend/app/api/: agents.py  auth.py  knowledge.py  llm_configs.py  run.py  traces.py
backend/app/core/: config.py  deps.py  encryption.py  migrations.py  security.py
backend/app/llm/: __init__.py  adapter.py  types.py
backend/app/llm/providers/: __init__.py  anthropic.py  bedrock.py  gemini.py  openai_compat.py
backend/tests/unit/agent/: test_indexer.py  test_loop.py  test_tools.py
backend/tests/unit/api/: test_agents.py  test_auth.py  test_llm_configs.py
backend/tests/unit/core/: test_config.py  test_encryption.py
backend/tests/unit/llm/: test_adapter.py  test_types.py
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/: ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/pages/: AgentPage.tsx  AgentsPage.tsx  AuthCallbackPage.tsx  LoginPage.tsx  OnboardingPage.tsx  SetupPage.tsx  TraceDetailPage.tsx  TracesPage.tsx
frontend/src/test/: AgentsPage.test.tsx  AuthContext.test.tsx  ProtectedRoute.test.tsx  utils.test.ts
supabase/migrations/: 001_initial_schema.sql
