[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "the-machine-backend"
version = "0.1.0"
description = "The Machine — FastAPI backend"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",   # file uploads

    # Config + validation
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",

    # Database
    "asyncpg>=0.29.0",
    "pgvector>=0.3.2",

    # Supabase (auth validation)
    "supabase>=2.7.0",

    # Encryption
    "cryptography>=43.0.0",

    # LLM provider SDKs
    "openai>=1.45.0",
    "anthropic>=0.34.0",
    "google-generativeai>=0.8.0",
    "aiobotocore>=2.15.0",

    # HTTP client (tools + internal)
    "httpx>=0.27.0",
    "beautifulsoup4>=4.12.0",    # url_reader tool

    # Utils
    "python-jose[cryptography]>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "types-beautifulsoup4",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

# ── Ruff ──────────────────────────────────────────────────────────────────────
[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

# ── Mypy ──────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
# google-generativeai has inconsistent stubs across SDK versions
module = "app.llm.providers.gemini"
ignore_errors = true

[[tool.mypy.overrides]]
# aiobotocore stubs are not published separately
module = "app.llm.providers.bedrock"
ignore_errors = true

# ── Pytest ────────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
